[bumpversion]
current_version = 1.1.0
commit = True
tag = True

[metadata]
name = pushover
version = attr: pushover.metadata.version
description = "Pushover cli client and library",
long-description = file: README.md
long-description-content-type = text/markdown
url = "https://github.com/fredrikhl/pushover"
author = fredrikhl
license = MIT
license-files = LICENSE.txt
classifiers = 
	Development Status :: 3 - Alpha
	Environment :: Console
	Intended Audience :: Developers
	Intended Audience :: System Administrators
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Topic :: Utilities

[options]
package_dir = 
	= src/
packages = find:
install_requires = 

[options.packages.find]
where = src

[options.extras_require]
dev = 
	build == 0.2.1
	bumpversion == 0.5.3

[options.entry_points]
console_scripts = 
	pushover = pushover.__main__:main

[bdist_wheel]
universal = 1

[bumpversion:file:src/pushover/metadata.py]
